Merge remote-tracking branch 'origin/main'
# Conflicts:
#	config-repository/api-gateway/application.properties